# ipa-parser

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: BinaryPlistParser.h  ConfigFile.h  Dispatcher.h  Executable.h  File.h  FileBundleParser.h  FileTypeResolver.h  JsonFile.h  Logger.h  MediaFile.h  PlistDate.h  PlistEntry.h  PlistFile.h  PlistParser.h  Unzipper.h  base64.h  utils.h
include/checks/: HttpUsageCheck.h  MD5UsageCheck.h  OwaspCheck.h  PermissionCheck.h
pugixml-1.11/src/: pugixml.cpp  pugixml.hpp
src/: BinaryPlistParser.cpp  ConfigFile.cpp  Dispatcher.cpp  Executable.cpp  FileBundleParser.cpp  FileTypeResolver.cpp  JsonFile.cpp  MediaFile.cpp  PlistDate.cpp  PlistEntry.cpp  PlistFile.cpp  PlistParser.cpp  Unzipper.cpp  utils.cpp
src/checks/: HttpUsageCheck.cpp  MD5UsageCheck.cpp  PermissionCheck.cpp
